tests/testWorkflows/invalid_workflows/invalidAppWorkflow.playbook
{
    "name": "invalidAppWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "start": "start",
            "steps": [
                {
                    "action": "helloWorld",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "next_steps": [],
                    "position": {},
                    "risk": 0, 
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "next_steps": [
                        {
                            "conditions": [
                                {
                                    "action": "regMatch",
                                    "app": "HelloWorld",
                                    "args": [
                                        {
                                            "name": "regex",
                                            "value": "(.*)"
                                        }
                                    ],
                                    "transforms": [
                                        {
                                            "action": "length",
                                            "app": "HelloWorld",
                                            "args": []
                                        }
                                    ]
                                }
                            ],
                            "name": "1",
                            "status": "Success"
                        }
                    ],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                }
            ]
        }
    ]
}